--- a/about.html
+++ b/about.html
@@ -100,17 +100,17 @@
     <p class="mb-5">We provide tools and analytics to help restaurants reach more customers efficiently.</p>
     <div class="row g-4">
       <div class="col-md-4 feature-card">
-        <img src="assests/images/customers.jpeg" alt="Customers">
+        <img src="assests/images/Customers.jpeg" alt="Customers">
         <h5>Customers</h5>
         <p>Reach more customers and increase order frequency.</p>
       </div>
       <div class="col-md-4 feature-card">
-        <img src="assests/images/rest.jpeg" alt="Restaurant">
+        <img src="assests/images/Rest.jpeg" alt="Restaurant">
         <h5>Restaurant</h5>
         <p>Analyze performance and streamline operations.</p>
       </div>
       <div class="col-md-4 feature-card">
-        <img src="assests/images/riders.jpeg" alt="Riders">
+        <img src="assests/images/Riders.jpeg" alt="Riders">
         <h5>Riders</h5>
         <p>Efficient delivery management for faster service.</p>
       </div>
@@ -238,3 +238,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
